AddInfo에서 바꾼 값 서버 저장 후 homeFragment 갱신

--- a/HangerApplication/app/src/main/AndroidManifest.xml
+++ b/HangerApplication/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
     <protected-broadcast android:name="android.intent.action.MEDIA_MOUNTED" />
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
