--- a/HangerApplication/app/build.gradle
+++ b/HangerApplication/app/build.gradle
@@ -38,5 +38,7 @@ dependencies {
     compile'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:palette-v7:26.+'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.prolificinteractive:material-calendarview:1.4.3'
+
     testCompile 'junit:junit:4.12'
 }
