새로운것 8개 추가 17개 변경

--- a/HangerApplication/app/src/main/AndroidManifest.xml
+++ b/HangerApplication/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
         <activity
             android:name=".LoginActivity"
             android:screenOrientation="portrait" />
+        <!--suppress AndroidDomInspection -->
         <activity
             android:name=".AppCompatPreferenceActivity"
             android:screenOrientation="portrait" />
