--- a/HangerApplication/app/src/main/AndroidManifest.xml
+++ b/HangerApplication/app/src/main/AndroidManifest.xml
@@ -59,11 +59,23 @@
         <activity
             android:name=".CameraActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".CameraActivity2"
+            android:screenOrientation="portrait" />
         <activity android:name=".SignupActivity" />
         <activity android:name=".SignupApproved" />
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings"></activity>
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.example.geehy.hangerapplication"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
     </application>
 
 </manifest>
