--- a/HangerApplication/app/build.gradle
+++ b/HangerApplication/app/build.gradle
@@ -17,10 +17,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    externalNativeBuild {
+        cmake {
+            path 'CMakeLists.txt'
+        }
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -32,16 +38,17 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.squareup.okio:okio:1.7.0'
     compile 'com.google.code.gson:gson:2.6.2'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta3' // Gson 변환을 위한 converter
+    compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta3'
+    // Gson 변환을 위한 converter
     compile 'com.squareup.retrofit2:converter-gson:2.0.1'
     compile 'pub.devrel:easypermissions:0.2.0'
-    compile'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:palette-v7:26.+'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.prolificinteractive:material-calendarview:1.4.3'
-    compile ('cn.trinea.android.view.autoscrollviewpager:android-auto-scroll-view-pager:1.1.2') {
+    compile('cn.trinea.android.view.autoscrollviewpager:android-auto-scroll-view-pager:1.1.2') {
         exclude module: 'support-v4'
     }
-
     testCompile 'junit:junit:4.12'
+    implementation project(':openCVLibrary320')
 }
